Finish header section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Egypt</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="header_first">
+        <h1 class="logo">Egypt</h1>
+        <ul>
+          <li>About us</li>
+          <li>contact</li>
+          <li><a href="https://en.wikipedia.org/wiki/Egypt">Egypt</a></li>
+        </ul>
+      </div>
+      <div class="header_second">
+        <div class="header_second1">
+          <h2>Egypt is awesome</h2>
+          <p>
+            Egypt, situated in northeastern Africa, is renowned for its ancient
+            wonders, including the Pyramids of Giza. The Nile River, the longest
+            in the world, has shaped its history and culture. Today, Egypt
+            blends rich heritage with modern vibrancy, offering a captivating
+            destination.
+          </p>
+          <button>Sign up</button>
+        </div>
+        <div class="second2">
+          <img
+            class="img"
+            src="images/pexels-pixabay-262786.jpg"
+            alt="Sphinx of Giza"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="body"></div>
+    <div class="container"></div>
+    <div class="signup"></div>
+    <div class="footer"></div>
+  </body>
 </html>
