Finish body section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,27 @@
         </div>
       </div>
     </div>
-    <div class="body"></div>
+    <div class="body">
+      <div class="body_first">Some Beautiful photos</div>
+      <div class="body_second">
+        <div class="info">
+          <img src="images/p1exels-tima-miroshnichenko-5973501.jpg" alt="" />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info">
+          <img src="images/p2exels-oleksandr-p-1540108.jpg" alt="" />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info">
+          <img src="images/p3hreyas-nair-AA3QOukE92w-unsplash.jpg" alt="" />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="info">
+          <img src="images/p4ajmi-c-AeMB_f01Q-unsplash.jpg" alt="" />
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+      </div>
+    </div>
     <div class="container"></div>
     <div class="signup"></div>
     <div class="footer"></div>
