Finish footer section

--- a/index.html
+++ b/index.html
@@ -58,8 +58,27 @@
         </div>
       </div>
     </div>
-    <div class="container"></div>
-    <div class="signup"></div>
-    <div class="footer"></div>
+    <div class="container">
+      <p class="quote">
+        “The best way to get started is to quit talking and begin doing.”
+      </p>
+      <p class="speaker">– Walt Disney</p>
+    </div>
+    <div class="signup">
+      <div class="content">
+        <div class="part1">
+          <p>Call to action ! it's time!</p>
+          <p>
+            Sign up for our product by clicking that button right over there !
+          </p>
+        </div>
+        <div class="part2">
+          <button>Sing up</button>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <p>Copyright<span>©</span>Ahmed Dorgham 2024</p>
+    </div>
   </body>
 </html>
